<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Titre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:text="@string/titre" />

    <TextView
        android:id="@+id/Titre_Regle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/titre_regle"
        android:layout_below="@id/Titre"
        />

    <TextView
        android:id="@+id/Text_Regle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="4dp"
        android:text="@string/text_regle"
        android:layout_below="@id/Titre"
        />

    <Button
        android:id="@+id/Bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/bonus" />


</LinearLayout>