<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity"
    android:background="@drawable/bg1"

    >

    <EditText
        android:id="@+id/pseudo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/Jouer"
        android:layout_centerInParent="true"
        android:hint="Pseudo"
        android:textSize="20sp"
        />


        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:layout_alignParentRight="true"
            android:src="@drawable/settings_logo1"
            android:id="@+id/Settings"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/jouer"
            android:id="@+id/Jouer"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/boutonAccueil"
            android:textColor="@color/text3"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_below="@id/Jouer"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/stats"
            android:id="@+id/stats"
            android:textSize="23sp"/>

    <Button
        android:id="@+id/Quitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/stats"
        android:layout_centerInParent="true"
        android:layout_marginTop="120dp"
        android:text="@string/quitter"
        android:textSize="23sp" />

</RelativeLayout>
